--- a/src/views/home/music.css
+++ b/src/views/home/music.css
@@ -9,7 +9,7 @@
     background-color: yellow;
   }
   
-  .music_holder{
+  /* .music_holder{
     width: 100%;
     height: 100%;
     position:relative;
@@ -25,7 +25,7 @@
     margin: 0;
     padding: 0;
     /* z-index: 8; */
-  }
+  /* } */
 
 .music_button_true {
     width: 5vw;
