--- a/src/views/home/index.css
+++ b/src/views/home/index.css
@@ -41,17 +41,6 @@ https://stackoverflow.com/questions/38896055/how-to-center-align-a-flexbox-conta
   /* max-width: 1300px; */
 }
 
-/* Referenced css lecture */
-/* body { */
-  /* width: 1400px;
-  height: 1000px;
-  font-family: sans-serif;
-  font-size: 14px; */
-  /* margin: 50px; */
-  /* color: black;
-  background-image: url("../../../public/assets/cards/Background_Image_Play.png"); */
-/* } */
-
 body {
   background-color: #018E8E;
 }
@@ -121,12 +110,10 @@ body {
   right: 10%;
   font-size: 5vw;
   padding: 2.5% 0% 0% 0%;
-  color: #018E8E;
+  color: #00575D;
   border: none;
   background-color: rgba(0, 0, 0, 0);
   text-align: center;
-  /* color: white; */
-  /* box-shadow: .2vw .2vw .2vw rgba(0, 0, 0, 0.5); */
   background-image: url("../../../public/assets/Match_Message.png");
   opacity: .9;
   background-size: contain;
@@ -147,17 +134,9 @@ body {
   color: white;
   border: none;
   background-color: rgba(0, 0, 0, 0);
-  /* color: white; */
-  /* box-shadow: .2vw .2vw .2vw rgba(0, 0, 0, 0.5); */
-  /* background-image: url("../../../public/assets/Match_Message.png");
-  opacity: .9;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: bottom; */
   z-index: 2;
 
 }
-
 
 .winning_squid{
   width: 80%;
@@ -167,7 +146,6 @@ body {
   transform: rotate(-90deg);
 }
 
-/* Styling for roll card holder */
 .card_holder {
   width: 60%;
   height: 57.6vw;
@@ -177,13 +155,10 @@ body {
   right: 0;
   position: relative;
   background-image: url("../../../public/assets/Union.png");
-  /* width: 40%; */
-  /* width: 3000px; */
   background-repeat: no-repeat;
   background-size: contain;
   background-position: bottom center;
   margin: 0;
-  /* padding: 20px; */
   column-gap: 3%;
   row-gap: 3%;
   display: flex;
@@ -191,23 +166,8 @@ body {
   flex-wrap: wrap;
   justify-content: space-around;
   margin: 0% 0% 0% 0%;
-  /* background-color: yellow; */
   padding: 3.5% 7% 7% 7%;
-  /* border: solid 5px black; */
-  /* perspective: 1000px; */
 }
-
-/* .HomePage{
-  width: 200%;
-  background-image: url("../../../public/assets/cards/Background_Image_Play.png");
-  background-color: aquamarine;
-} */
-
-/* .Outside{
-  width: 3000px;
-  background-image: url("../../../public/assets/cards/Background_Image_Play.png");
-  background-color: aquamarine;
-} */
 
 /* https://www.w3schools.com/howto/howto_css_pill_button.asp */
 /* https://www.w3schools.com/csS/css3_shadows_box.asp */
@@ -215,11 +175,11 @@ body {
 
 .help_button {
   width: 15%;
-  height: 4%;
+  height: 5%;
   position: absolute;
   top: 92%;
   right: 70%;
-  font-size: 1.5vw;
+  font-size: 2vw;
   border: none;
   border-radius: 16px;
   background-color: #018E8E;
@@ -248,18 +208,14 @@ body {
   top: 5%;
   right: 69%;
   font-size: 4vw;
-  /* color: #018E8E; */
   color: black;
   text-shadow: 1px 1px 0 white; 
   border: none;
   background-color: rgba(0, 0, 0, 0);
-  /* color: white; */
-  /* box-shadow: .2vw .2vw .2vw rgba(0, 0, 0, 0.5); */
   background-image: url("../../../public/assets/Menu_Button.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: bottom;
-
 }
 
 
@@ -270,14 +226,11 @@ body {
   top: 22%;
   right: 69%;
   font-size: 3vw;
-  color: #018E8E;
+  color: black;
   border: none;
   padding: 1% 0% 0% 0%;
   background-color: rgba(0, 0, 0, 0);
   text-align: center;
-  /* margin: 1% 1% 1% 10%; */
-  /* color: white; */
-  /* box-shadow: .2vw .2vw .2vw rgba(0, 0, 0, 0.5); */
   background-image: url("../../../public/assets/New_Matches_Holder.png");
   background-size: contain;
   background-repeat: no-repeat;
@@ -294,8 +247,6 @@ body {
   color: #018E8E;
   border: none;
   background-color: rgba(0, 0, 0, 0);
-  /* color: white; */
-  /* box-shadow: .2vw .2vw .2vw rgba(0, 0, 0, 0.5); */
   background-image: url("../../../public/assets/Expand_Button.png");
   background-size: contain;
   background-repeat: no-repeat;
@@ -310,13 +261,10 @@ body {
   top: 15%;
   right: 59%;
   font-size: 3vw;
-  color: #018E8E;
+  color: black;
   border: none;
   padding: 5% 0% 0% 0%;
   background-color: rgba(0, 0, 0, 0);
-  /* margin: 1% 1% 1% 10%; */
-  /* color: white; */
-  /* box-shadow: .2vw .2vw .2vw rgba(0, 0, 0, 0.5); */
   background-image: url("../../../public/assets/New_Matches_Holder.png");
   background-size: contain;
   background-repeat: no-repeat;
@@ -324,20 +272,15 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* background-color: blue; */
 
 }
 
 .matches_made_holder {
-  /* background-color: yellow; */
   width: 80%;
   height: 40%;
-  /* height: 10px; */
   display:flex;
   flex-direction: row;
   column-gap: 2%;
-  /* flex: 1 0 16%; */
-  /* justify-content: ; */
 }
 
 .minimize_button {
@@ -349,8 +292,6 @@ body {
   color: #018E8E;
   border: none;
   background-color: rgba(0, 0, 0, 0);
-  /* color: white; */
-  /* box-shadow: .2vw .2vw .2vw rgba(0, 0, 0, 0.5); */
   background-image: url("../../../public/assets/Minimize_Button.png");
   background-size: contain;
   background-repeat: no-repeat;
@@ -362,16 +303,13 @@ body {
   height: 47%;
   position: absolute;
   text-align: center;
-  top: 51%;
+  top: 52%;
   right: 46%;
   font-size: 3vw;
   color: white;
   border: none;
   padding: 5% 0% 0% 0%;
   background-color: rgba(0, 0, 0, 0);
-  /* margin: 1% 1% 1% 10%; */
-  /* color: white; */
-  /* box-shadow: .2vw .2vw .2vw rgba(0, 0, 0, 0.5); */
   background-image: url("../../../public/assets/Instructions_Background2.png");
   background-size: contain;
   background-repeat: no-repeat;
@@ -379,7 +317,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* background-color: blue; */
 }
 
 .winning_text{
@@ -405,15 +342,10 @@ body {
     bottom: 0;
     right: 0;
     position: absolute;
-    /* width: 40%; */
-    /* width: 3000px; */
     margin: 0;
-    /* padding: 20px; */
     column-gap: 3%;
     row-gap: 10%;
     padding: 3% 7% 7% 7%;
-    /* border: solid 5px black; */
-    /* perspective: 1000px; */
     z-index: 4;
   }
 
@@ -423,50 +355,13 @@ body {
     position: relative;
     top: 70%;
     right: 0;
-    /* color: #018E8E; */
     border: none;
     background-color: rgba(0, 0, 0, 0);
-    /* color: white; */
-    /* box-shadow: .2vw .2vw .2vw rgba(0, 0, 0, 0.5); */
     background-image: url("../../../public/assets/X_Button.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: bottom;
   }
 
-  /* .music_button_true {
-    width: 6%;
-    height: 6%;
-    position: absolute;
-    top: 91.4%;
-    right: 64%;
-    color: #018E8E;
-    border: none;
-    background-color: rgba(0, 0, 0, 0); */
-    /* color: white; */
-    /* box-shadow: .2vw .2vw .2vw rgba(0, 0, 0, 0.5); */
-    /* background-image: url("../../../public/assets/Music_Button.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: bottom;
-  
-  } */
 
-  /* .music_button_false {
-    width: 6%;
-    height: 6%;
-    position: absolute;
-    top: 91.4%;
-    right: 64%;
-    color: #018E8E;
-    border: none;
-    background-color: rgba(0, 0, 0, 0); */
-    /* color: white; */
-    /* box-shadow: .2vw .2vw .2vw rgba(0, 0, 0, 0.5); */
-    /* background-image: url("../../../public/assets/No_Music_Button.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: bottom;
-  
-  } */
 
