--- a/src/views/home/menu.css
+++ b/src/views/home/menu.css
@@ -25,6 +25,8 @@ body {
   padding: 0;
 }
 
+/* The following reference helped me with font border */
+/* https://www.geeksforgeeks.org/css-font-border/ */
 .menu_title {
   width: 100%;
   height: 30%;
@@ -101,4 +103,68 @@ body {
   position: absolute;
   top: 10%;
   left: 77%;
+}
+
+.character_menu{
+  width: 100vw;
+  height: 57.5vw;
+  position: absolute;
+  top: 0vw;
+  right: 0vw;
+  font-size: 5vw;
+  /* background-color: yellow; */
+  background-image: url("../../../public/assets/Ink.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 5;
+}
+
+.character_menu_text{
+  width: 70%;
+  height: 20%;
+  position: absolute;
+  top: 38%;
+  right: 15%;
+  text-align: center;
+  font-size: 4vw;
+  color: white;
+  background-color: black;
+  z-index: 6;
+}
+
+.character_menu_button_holder{
+  display: flex;
+  column-gap: 6%;
+  width: 60%;
+  position: absolute;
+  top: 51%;
+  right: 22%;
+  z-index: 6;
+  /* background-color: yellow; */
+  justify-content: center;
+}
+
+.character_menu_button{
+  padding: 1% 2% 1% 2%;
+  text-align: center;
+  position: relative;
+  font-size: 2.5vw;
+  border: none;
+  border-radius: 16px;
+  color: white;
+  background-color:#018E8E;
+  box-shadow: .2vw .2vw .2vw rgba(0, 0, 0, 0.5);
+}
+
+
+.actual_button{
+  /* padding: 1% 3% 1% 3%; */
+  position: relative;
+  font-size: 2.5vw;
+  border: none;
+  border-radius: 16px;
+  color: white;
+  background-color:rgba(0, 0, 0, 0);
+  text-align: center;
 }
