--- a/src/pages/gamepage.css
+++ b/src/pages/gamepage.css
@@ -2,7 +2,6 @@
 width
 height
 display
-position
 flex
 direction
 wrap
@@ -10,6 +9,7 @@ justify-content
 align-content
 align-items
 column-gap
+position
 text-align
 font-family
 font-size
@@ -33,19 +33,16 @@ https://developer.mozilla.org/en-US/docs/Learn/CSS/CSS_layout/Flexbox#nested_fle
 https://stackoverflow.com/questions/69852513/100-total-width-for-flex-items-in-flex-container-with-gap-inbetween
 https://stackoverflow.com/questions/38896055/how-to-center-align-a-flexbox-container  */
 
-
-/* Got this from css lecture */
 * {
   box-sizing: border-box;
   font-family: "Itim", sans-serif;
-  /* max-width: 1300px; */
 }
 
 body {
   background-color: #018E8E;
 }
 
-.HomePage{
+.HomePage {
   width: 100%;
   height: 100%;
   position:relative;
@@ -53,54 +50,14 @@ body {
   left: 0;
   right: 0;
   bottom:0;
-  background-image: url("../../../public/assets/MojiMatchHome_AdjustedAgain4.png");
+  margin: 0;
+  padding: 0;
+  background-image: url("../../public/assets/MojiMatchHome_AdjustedAgain4.png");
   background-repeat: no-repeat;
   background-size: contain;
   background-color: #018E8E;
   background-position: center top;
-  margin: 0;
-  padding: 0;
 }
-
-/* .section{
-  width: 60%;
-  position:absolute;
-  left: 1;
-  bottom: 0;
-  top: 0;
-  right: 0;
-
-  background-image: url("../../../public/assets/Union.png");
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-color: yellow;
-  background-position: center top;
-  margin: 0;
-  padding: 20px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-} */
-
-/* Styling for roll card holder */
-/* .rollcard-list {
-  width: calc(100% - 100px);
-  left: 670px;
-  top: 100px;
-  position: relative;
-  background-image: url("../../../public/assets/Union.png"); */
-  /* width: 40%; */
-  /* width: 3000px; */
-  /* display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: flex-start;
-  margin: 0px 0px 0px;
-  background-color: green; */
-  /* perspective: 1000px; */
-/* } */
 
 .match_message {
   width: 40%;
@@ -108,19 +65,18 @@ body {
   position: absolute;
   top: 40%;
   right: 10%;
+  text-align: center;
   font-size: 5vw;
   padding: 2.5% 0% 0% 0%;
-  color: #00575D;
   border: none;
+  color: #00575D;
   background-color: rgba(0, 0, 0, 0);
-  text-align: center;
-  background-image: url("../../../public/assets/Match_Message.png");
-  opacity: .9;
+  background-image: url("../../public/assets/Match_Message.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: bottom;
+  opacity: .9;
   z-index: 3;
-
 }
 
 .win_message {
@@ -131,14 +87,13 @@ body {
   right: 10%;
   font-size: 5vw;
   padding: 2.5% 0% 0% 0%;
-  color: white;
   border: none;
+  color: white;
   background-color: rgba(0, 0, 0, 0);
   z-index: 2;
-
 }
 
-.winning_squid{
+.winning_squid {
   width: 80%;
   position: relative;
   top: 0%;
@@ -149,30 +104,29 @@ body {
 .card_holder {
   width: 60%;
   height: 57.6vw;
-  left: 40%;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  position: relative;
-  background-image: url("../../../public/assets/Union.png");
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: bottom center;
-  margin: 0;
-  column-gap: 3%;
-  row-gap: 3%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
+  column-gap: 3%;
+  row-gap: 3%;
+  position: relative;
+  left: 40%;
+  top: 0;
+  bottom: 0;
+  right: 0;
   margin: 0% 0% 0% 0%;
   padding: 3.5% 7% 7% 7%;
+  background-image: url("../../public/assets/Union.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: bottom center;
 }
 
+/* References for pill buttons */
 /* https://www.w3schools.com/howto/howto_css_pill_button.asp */
 /* https://www.w3schools.com/csS/css3_shadows_box.asp */
 /* https://stackoverflow.com/questions/5458716/is-it-possible-to-set-transparency-in-css3-box-shadow */
-
 .help_button {
   width: 15%;
   height: 5%;
@@ -187,7 +141,7 @@ body {
   box-shadow: .2vw .2vw .2vw rgba(0, 0, 0, 0.5);
 }
 
-.back_to_menu_button{
+.back_to_menu_button {
   width: 40%;
   height: 40%;
   position: absolute;
@@ -203,12 +157,12 @@ body {
 
 .menu_button_text{
   position: absolute;
-  text-align: center;
   top: -21%;
   right: 19%;
+  text-align: center;
   font-size: 4vw;
-  color: black;
   text-shadow: 1px 1px 0 white; 
+  color: black;
 }
 
 .menu_button {
@@ -217,12 +171,9 @@ body {
   position: absolute;
   top: 5%;
   right: 69%;
-  /* font-size: 4vw;
-  color: black;
-  text-shadow: 1px 1px 0 white;  */
   border: none;
   background-color: rgba(0, 0, 0, 0);
-  background-image: url("../../../public/assets/Menu_Button.png");
+  background-image: url("../../public/assets/Menu_Button.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: bottom;
@@ -235,17 +186,16 @@ body {
   position: absolute;
   top: 22%;
   right: 69%;
+  text-align: center;
   font-size: 3vw;
-  color: black;
   border: none;
   padding: 1% 0% 0% 0%;
+  color: black;
   background-color: rgba(0, 0, 0, 0);
-  text-align: center;
-  background-image: url("../../../public/assets/New_Matches_Holder.png");
+  background-image: url("../../public/assets/New_Matches_Holder.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: bottom;
-
 }
 
 .expand_button {
@@ -254,41 +204,39 @@ body {
   position: absolute;
   top: 56%;
   right: -11%;
-  color: #018E8E;
   border: none;
+  color: #018E8E;
   background-color: rgba(0, 0, 0, 0);
-  background-image: url("../../../public/assets/Expand_Button.png");
+  background-image: url("../../public/assets/Expand_Button.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: bottom;
-
 }
 
 .matches_counter_expanded {
   width: 39%;
   height: 39%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   position: absolute;
   top: 15%;
   right: 59%;
   font-size: 3vw;
-  color: black;
   border: none;
   padding: 5% 0% 0% 0%;
+  color: black;
   background-color: rgba(0, 0, 0, 0);
-  background-image: url("../../../public/assets/New_Matches_Holder.png");
+  background-image: url("../../public/assets/New_Matches_Holder.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
 }
 
 .matches_made_holder {
   width: 72%;
   height: 40%;
-  display:flex;
+  display: flex;
   flex-direction: row;
   column-gap: 2%;
 }
@@ -299,51 +247,49 @@ body {
   position: absolute;
   top: 60%;
   right: -6%;
-  color: #018E8E;
   border: none;
+  color: #018E8E;
   background-color: rgba(0, 0, 0, 0);
-  background-image: url("../../../public/assets/Minimize_Button.png");
+  background-image: url("../../public/assets/Minimize_Button.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: bottom;
 }
 
-.help_message{
+.help_message {
   width: 64%;
   height: 47%;
-  position: absolute;
-  text-align: center;
-  top: 52%;
-  right: 46%;
-  font-size: 3vw;
-  color: white;
-  border: none;
-  padding: 5% 0% 0% 0%;
-  background-color: rgba(0, 0, 0, 0);
-  background-image: url("../../../public/assets/Instructions_Background2.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: absolute;
+  top: 52%;
+  right: 46%;
+  text-align: center;
+  font-size: 3vw;
+  border: none;
+  padding: 5% 0% 0% 0%;
+  color: white;
+  background-color: rgba(0, 0, 0, 0);
+  background-image: url("../../public/assets/Instructions_Background2.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
-.winning_text{
+.winning_text {
   position: absolute;
-  text-align: center;
   top: 180%;
-
+  text-align: center;
 }
 
 .help_text{
   width: 50%;
   position: absolute;
   top: 10%;
-
 }
 
-.match_locker{
+.match_locker {
     width: 60%;
     height: calc(.57 * 100vw);
     opacity: 0;
@@ -352,9 +298,9 @@ body {
     bottom: 0;
     right: 0;
     position: absolute;
-    margin: 0;
     column-gap: 3%;
     row-gap: 10%;
+    margin: 0;
     padding: 3% 7% 7% 7%;
     z-index: 4;
   }
@@ -367,11 +313,8 @@ body {
     right: 0;
     border: none;
     background-color: rgba(0, 0, 0, 0);
-    background-image: url("../../../public/assets/X_Button.png");
+    background-image: url("../../public/assets/X_Button.png");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: bottom;
   }
-
-
-
